# whatsweb

./: CMakeLists.txt  launcher.sh  manifest.json  manifest.json.in  whatsweb-helper  whatsweb-push-helper.json  whatsweb.apparmor  whatsweb.desktop
app/: ImportPage.qml  Main.qml  NotificationsHowto.qml  Notifier.qml  ScreenSaverView.qml  SettingButton.qml  SettingPage.qml  SettingsPage.qml  Toast.qml  settingsPage.qml  ubuntutheme.js
app/UCSComponents/: NumberEditRow.qml  SliderRow.qml  SwitchRow.qml
qml-download-helper-module/: DownloadHelper.cpp
qml-notify-module/: CMakeLists.txt  NotificationHelper.cpp  NotificationHelper.h  pushclient.cpp  pushclient.h
src/: NotificationHelper.cpp  NotificationHelper.h  main.cpp  pushclient.cpp  pushclient.h  resource.qrc
src/qml/: Main.qml  ubuntutheme.js
